--- a/MPS-API/appsettings.json
+++ b/MPS-API/appsettings.json
@@ -1,4 +1,114 @@
 {
+  "ConnectionStrings": {
+    "//": "CB",
+    "MES": "data source=10.9.0.23;initial catalog=CBMES;persist security info=True;user id=sa;password=Cb@2016?;MultipleActiveResultSets=True;App=EntityFramework",
+    "Server": "data source=10.9.0.21;initial catalog=PickupForm;persist security info=True;user id=sa;password=Cb@2016?;MultipleActiveResultSets=True;App=EntityFramework",
+    "Authodb": "data source=10.9.0.32;initial catalog=AuthoDB;user id=sa;password=P@$$w0rd;MultipleActiveResultSets=True;App=EntityFramework",
+    "RackDB": "data source=10.9.0.23;initial catalog=RackNET;persist security info=True;user id=sa;password=Cb@2016?;MultipleActiveResultSets=True;App=EntityFramework",
+    "HPDataDB": "data source=10.9.0.21;initial catalog=HP_Basis;persist security info=True;user id=ro;password=Ssb@123?;MultipleActiveResultSets=True;App=EntityFramework",
+    "FRIDB": "data source=10.9.0.21;initial catalog=CB_EEP;persist security info=True;user id=ro;password=Ssb@123?;MultipleActiveResultSets=True;App=EntityFramework"
+  },
+  "_FactoryConnectionStrings": [
+    {
+      "//": "CB",
+      "MES": "data source=10.9.0.23;initial catalog=CBMES;persist security info=True;user id=sa;password=Cb@2016?;MultipleActiveResultSets=True;App=EntityFramework",
+      "Server": "data source=10.9.0.21;initial catalog=PickupForm;persist security info=True;user id=sa;password=Cb@2016?;MultipleActiveResultSets=True;App=EntityFramework",
+      "Authodb": "data source=10.9.0.32;initial catalog=AuthoDB;user id=sa;password=P@$$w0rd;MultipleActiveResultSets=True;App=EntityFramework",
+      "RackDB": "data source=10.9.0.23;initial catalog=RackNET;persist security info=True;user id=sa;password=Cb@2016?;MultipleActiveResultSets=True;App=EntityFramework",
+      "HPDataDB": "data source=10.9.0.21;initial catalog=HP_Basis;persist security info=True;user id=ro;password=Ssb@123?;MultipleActiveResultSets=True;App=EntityFramework",
+      "FRIDB": "data source=10.9.0.21;initial catalog=CB_EEP;persist security info=True;user id=ro;password=Ssb@123?;MultipleActiveResultSets=True;App=EntityFramework"
+    },
+    {
+      "//": "CB Test",
+      "MES": "data source=10.9.0.23;initial catalog=CBMES;persist security info=True;user id=sa;password=Cb@2016?;MultipleActiveResultSets=True;App=EntityFramework",
+      "Server": "data source=10.9.0.21;initial catalog=PickupFormTest;persist security info=True;user id=sa;password=Cb@2016?;MultipleActiveResultSets=True;App=EntityFramework",
+      "Authodb": "data source=10.9.0.32;initial catalog=AuthoDB;user id=sa;password=P@$$w0rd;MultipleActiveResultSets=True;App=EntityFramework",
+      "RackDB": "data source=10.9.0.23;initial catalog=RackNET;persist security info=True;user id=sa;password=Cb@2016?;MultipleActiveResultSets=True;App=EntityFramework",
+      "HPDataDB": "data source=10.9.0.21;initial catalog=HP_Basis;persist security info=True;user id=ro;password=Ssb@123?;MultipleActiveResultSets=True;App=EntityFramework",
+      "FRIDB": "data source=10.9.0.21;initial catalog=CB_EEP;persist security info=True;user id=ro;password=Ssb@123?;MultipleActiveResultSets=True;App=EntityFramework"
+    },
+    {
+      "//": "SHC",
+      "MES": "data source=data source=10.4.0.18;initial catalog=SHCMES;persist security info=True;user id=sa;password=shc@123;MultipleActiveResultSets=True;App=EntityFramework",
+      "Server": "data source=10.4.0.49;initial catalog=PickupForm;persist security info=True;user id=sa;password=shc@1234;MultipleActiveResultSets=True;App=EntityFramework",
+      "Authodb": "data source=10.4.0.34;initial catalog=AuthoDB;user id=sa;password=shc@123;MultipleActiveResultSets=True;App=EntityFramework",
+      "RackDB": "data source=10.4.0.49;initial catalog=RackNET;persist security info=True;user id=sa;password=shc@1234;MultipleActiveResultSets=True;App=EntityFramework",
+      "HPDataDB": "data source=10.4.0.41;initial catalog=HP_Basis;persist security info=True;user id=ro;password=Ssb@123?;MultipleActiveResultSets=True;App=EntityFramework",
+      "FRIDB": "data source=10.4.0.41;initial catalog=SHC_Q;persist security info=True;user id=ro;password=Ssb@123?;MultipleActiveResultSets=True;App=EntityFramework"
+    },
+    {
+      "//": "SHC Test",
+      "MES": "data source=data source=10.4.0.18;initial catalog=SHCMES;persist security info=True;user id=sa;password=shc@123;MultipleActiveResultSets=True;App=EntityFramework",
+      "Server": "data source=10.4.0.49;initial catalog=PickupFormTest;persist security info=True;user id=sa;password=shc@1234;MultipleActiveResultSets=True;App=EntityFramework",
+      "Authodb": "data source=10.4.0.34;initial catalog=AuthoDB;user id=sa;password=shc@123;MultipleActiveResultSets=True;App=EntityFramework",
+      "RackDB": "data source=10.4.0.49;initial catalog=RackNET;persist security info=True;user id=sa;password=shc@1234;MultipleActiveResultSets=True;App=EntityFramework",
+      "HPDataDB": "data source=10.4.0.41;initial catalog=HP_Basis;persist security info=True;user id=ro;password=Ssb@123?;MultipleActiveResultSets=True;App=EntityFramework",
+      "FRIDB": "data source=10.4.0.41;initial catalog=SHC_Q;persist security info=True;user id=ro;password=Ssb@123?;MultipleActiveResultSets=True;App=EntityFramework"
+    },
+    {
+      "//": "SYF",
+      "MES": "data source=data source=10.5.0.36;initial catalog=SYFMES;persist security info=True;user id=sa;password=SYF@2017;MultipleActiveResultSets=True;App=EntityFramework",
+      "Server": "data source=10.5.0.34;initial catalog=PickupForm;persist security info=True;user id=saas;password=SYF@1234;MultipleActiveResultSets=True;App=EntityFramework",
+      "Authodb": "data source=10.5.0.22;initial catalog=AuthoDB;user id=mes;password=qweqwe;MultipleActiveResultSets=True;App=EntityFramework",
+      "RackDB": "data source=10.5.0.34;initial catalog=RackNET;persist security info=True;user id=saas;password=SYF@1234;MultipleActiveResultSets=True;App=EntityFramework",
+      "HPDataDB": "data source=10.5.0.25;initial catalog=HP_Basis;persist security info=True;user id=ro;password=Ssb@123?;MultipleActiveResultSets=True;App=EntityFramework",
+      "FRIDB": "data source=10.5.0.25;initial catalog=MES_SYF;persist security info=True;user id=ro;password=Ssb@123?;MultipleActiveResultSets=True;App=EntityFramework"
+    },
+    {
+      "//": "SYF Test",
+      "MES": "data source=data source=10.5.0.36;initial catalog=SYFMES;persist security info=True;user id=sa;password=SYF@2017;MultipleActiveResultSets=True;App=EntityFramework",
+      "Server": "data source=10.5.0.34;initial catalog=PickupFormTest;persist security info=True;user id=saas;password=SYF@1234;MultipleActiveResultSets=True;App=EntityFramework",
+      "Authodb": "data source=10.5.0.22;initial catalog=AuthoDB;user id=mes;password=qweqwe;MultipleActiveResultSets=True;App=EntityFramework",
+      "RackDB": "data source=10.5.0.34;initial catalog=RackNET;persist security info=True;user id=saas;password=SYF@1234;MultipleActiveResultSets=True;App=EntityFramework",
+      "HPDataDB": "data source=10.5.0.25;initial catalog=HP_Basis;persist security info=True;user id=ro;password=Ssb@123?;MultipleActiveResultSets=True;App=EntityFramework",
+      "FRIDB": "data source=10.5.0.25;initial catalog=MES_SYF;persist security info=True;user id=ro;password=Ssb@123?;MultipleActiveResultSets=True;App=EntityFramework"
+    },
+    {
+      "//": "SPC",
+      "MES": "data source=10.10.0.21;initial catalog=SPCMES;persist security info=True;user id=sa;password=Spc@2018?;MultipleActiveResultSets=True;App=EntityFramework",
+      "Server": "data source=10.10.0.21;initial catalog=PickupForm;persist security info=True;user id=sa;password=Spc@2018?;MultipleActiveResultSets=True;App=EntityFramework",
+      "Authodb": "data source=10.10.0.21;initial catalog=AuthoDB;user id=sa;password=Spc@2018?;MultipleActiveResultSets=True;App=EntityFramework",
+      "RackDB": "data source=10.10.0.22;initial catalog=RackNET;persist security info=True;user id=sa;password=Spc@2018?;MultipleActiveResultSets=True;App=EntityFramework",
+      "HPDataDB": "data source=10.10.0.22;initial catalog=HP_Basis;persist security info=True;user id=ro;password=Ssb@123?;MultipleActiveResultSets=True;App=EntityFramework",
+      "FRIDB": "data source=10.10.0.22;initial catalog=SPC_EEP;persist security info=True;user id=ro;password=Ssb@123?;MultipleActiveResultSets=True;App=EntityFramework"
+    },
+    {
+      "//": "SPC Test",
+      "MES": "data source=10.10.0.21;initial catalog=SPCMES;persist security info=True;user id=sa;password=Spc@2018?;MultipleActiveResultSets=True;App=EntityFramework",
+      "Server": "data source=10.10.0.21;initial catalog=PickupFormTest;persist security info=True;user id=sa;password=Spc@2018?;MultipleActiveResultSets=True;App=EntityFramework",
+      "Authodb": "data source=10.10.0.21;initial catalog=AuthoDB;user id=sa;password=Spc@2018?;MultipleActiveResultSets=True;App=EntityFramework",
+      "RackDB": "data source=10.10.0.22;initial catalog=RackNET;persist security info=True;user id=sa;password=Spc@2018?;MultipleActiveResultSets=True;App=EntityFramework",
+      "HPDataDB": "data source=10.10.0.22;initial catalog=HP_Basis;persist security info=True;user id=ro;password=Ssb@123?;MultipleActiveResultSets=True;App=EntityFramework",
+      "FRIDB": "data source=10.10.0.22;initial catalog=SPC_EEP;persist security info=True;user id=ro;password=Ssb@123?;MultipleActiveResultSets=True;App=EntityFramework"
+    },
+    {
+      "//": "TSH",
+      "MES": "data source=10.11.0.16;initial catalog=TSHMES;persist security info=True;user id=sd_local;password=sd@7317?;MultipleActiveResultSets=True;App=EntityFramework",
+      "Server": "data source=10.11.0.17;initial catalog=PickupForm;persist security info=True;user id=sd_local;password=sd@7317?;MultipleActiveResultSets=True;App=EntityFramework",
+      "Authodb": "data source=10.11.0.17;initial catalog=AuthoDB;user id=sd_local;password=sd@7317?;MultipleActiveResultSets=True;App=EntityFramework",
+      "RackDB": "data source=10.11.0.17;initial catalog=RackNET;persist security info=True;user id=sd_local;password=sd@7317?;MultipleActiveResultSets=True;App=EntityFramework",
+      "HPDataDB": "data source=10.11.0.17;initial catalog=HP_Basis;persist security info=True;user id=sd_local;password=sd@7317?;MultipleActiveResultSets=True;App=EntityFramework",
+      "FRIDB": "data source=10.11.0.17;initial catalog=TSH_EEP;persist security info=True;user id=sd_local;password=sd@7317?;MultipleActiveResultSets=True;App=EntityFramework"
+    },
+    {
+      "//": "TSH Test",
+      "MES": "data source=10.11.0.16;initial catalog=TSHMES;persist security info=True;user id=sd_local;password=sd@7317?;MultipleActiveResultSets=True;App=EntityFramework",
+      "Server": "data source=10.11.0.17;initial catalog=PickupFormTest;persist security info=True;user id=sd_local;password=sd@7317?;MultipleActiveResultSets=True;App=EntityFramework",
+      "Authodb": "data source=10.11.0.17;initial catalog=AuthoDB;user id=sd_local;password=sd@7317?;MultipleActiveResultSets=True;App=EntityFramework",
+      "RackDB": "data source=10.11.0.17;initial catalog=RackNET;persist security info=True;user id=sd_local;password=sd@7317?;MultipleActiveResultSets=True;App=EntityFramework",
+      "HPDataDB": "data source=10.11.0.17;initial catalog=HP_Basis;persist security info=True;user id=sd_local;password=sd@7317?;MultipleActiveResultSets=True;App=EntityFramework",
+      "FRIDB": "data source=10.11.0.17;initial catalog=TSH_EEP;persist security info=True;user id=sd_local;password=sd@7317?;MultipleActiveResultSets=True;App=EntityFramework"
+    },
+    {
+      "//": "TSH Test (CB Data)",
+      "MES": "data source=10.9.0.23;initial catalog=CBMES;persist security info=True;user id=sa;password=Cb@2016?;MultipleActiveResultSets=True;App=EntityFramework",
+      "Server": "data source=10.11.0.131;initial catalog=PickupForm;persist security info=True;user id=sa;password=Cb@2016?;MultipleActiveResultSets=True;App=EntityFramework",
+      "Authodb": "data source=10.9.0.32;initial catalog=AuthoDB;user id=sa;password=P@$$w0rd;MultipleActiveResultSets=True;App=EntityFramework",
+      "RackDB": "data source=10.9.0.23;initial catalog=RackNET;persist security info=True;user id=sa;password=Cb@2016?;MultipleActiveResultSets=True;App=EntityFramework",
+      "HPDataDB": "data source=10.11.0.131;initial catalog=HP_Basis;persist security info=True;user id=ro;password=Ssb@123?;MultipleActiveResultSets=True;App=EntityFramework",
+      "FRIDB": "data source=10.11.0.131;initial catalog=CB_EEP;persist security info=True;user id=ro;password=Ssb@123?;MultipleActiveResultSets=True;App=EntityFramework"
+    }
+  ],
   "Logging": {
     "LogLevel": {
       "Default": "Information",
