--- a/MPS-API/MPS-API.csproj
+++ b/MPS-API/MPS-API.csproj
@@ -11,5 +11,6 @@
     <PackageReference Include="AutoMapper" Version="10.1.1"/>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.4"/>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.4"/>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1"/>
   </ItemGroup>
 </Project>
